fixed some spacing issues

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -52,7 +52,7 @@ h1,h2,h3,h4,h5,h6 {
 
 p strong{font-family: $MiaGroteskBold;font-size:1.3rem}
 p {margin-bottom:1em;}
-p em{font-family: $MiaGroteskItalic;display:inline-block;padding-top:0.6em;}
+p em{font-family: $MiaGroteskItalic;}
 
 hr{display:none;}
 
